--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700&display=swap');
+
+Body{
+  font-family: 'Roboto Slab', serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2{
+  background-color: #FFCA41;
+  color: #fff;
+  font-weight: 700;
+  font-size: 30px;
+  padding: 2% 3%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a{
+  text-decoration: none;
+  
 }
 
-.App-link {
-  color: #61dafb;
+img{
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+figure{
+  margin-bottom: 5em;
+}
+
+.home-container{
+  display: block;
+  margin: 10% auto;
+  width: 90%;
+  max-width: 500px;
+}
+
+.home-container p{
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.5em;
 }
