--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,49 @@
   box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700;900&display=swap');
+
+.App{
+  /* width: 85%;
+  margin: 0 auto; */
+}
 
 Body{
   font-family: 'Roboto Slab', serif;
+  color:#333333;
+
 }
 
-h2{
+
+
+
+.nav{
+  width: 100%;
+ 
+}
+
+a{
+  text-decoration: none;
+}
+
+img{
+  width: 100%;
+}
+
+.img-wrapper{
+  line-height: 0;
+}
+figure{
+    margin-bottom: 5em;
+}
+
+.home-container{
+  margin: 10% auto;
+  width: 90%;
+  max-width: 500px;
+}
+
+.home-container h2{
   background-color: #FFCA41;
   color: #fff;
   font-weight: 700;
@@ -18,28 +54,101 @@ h2{
   padding: 2% 3%;
 }
 
-a{
-  text-decoration: none;
-  
-}
-
-img{
-  width: 100%;
-}
-
-figure{
-  margin-bottom: 5em;
-}
-
-.home-container{
-  display: block;
-  margin: 10% auto;
-  width: 90%;
-  max-width: 500px;
-}
-
 .home-container p{
   font-size: 18px;
   font-weight: 500;
   line-height: 1.5em;
 }
+
+.gallery-container{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  place-items: center;
+  gap: 10%;
+  border-bottom: 2px solid black;
+  padding-bottom: 10%;
+  margin: 10% 5%;
+}
+
+.gallery-container h2{
+  font-weight: 500;
+  font-size: 1.875em;
+}
+
+.gallery-container h3, 
+.detail-container h3{
+  font-weight: 900;
+  font-size: 1.125em;
+  color:#FFCA41;
+  margin-bottom: 1em;
+}
+
+.gallery-container p, 
+.detail-container p{
+  font-weight: 500;
+  font-size: 0.938em;
+  margin-bottom: 2em;
+}
+
+.gallery-container a{
+  background-color: #FFCA41;
+  font-weight: 500;
+  font-size: 1.25em;
+  color: #fff;
+  padding: .5em 2em;
+  margin: 20px 0;
+  border-radius: 40px;
+}
+
+.gallery-image img{
+  width: 100%
+}
+
+.detail-container{
+  margin: 10%;
+}
+
+.detail-image{
+  width: 12.75em;
+  margin: 0 auto;
+}
+
+.detail-container h2{
+  font-weight: 500;
+  font-size: 3.25em;
+}
+
+.detail-container p{
+  line-height: 19.78px;
+  font-size: 15px;
+}
+
+.detail-discription-metaInfo{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 1em;
+}
+
+.column-left{
+  grid-column: 1;
+}
+
+.column-right{
+  grid-column: 2;
+  text-align: right;
+}
+
+
+.detail-discription-metaInfo p{
+  font-weight: 500;
+  font-size: .813em;
+  
+  color: rgba(51, 51, 51, .5);
+  margin-bottom: unset;
+}
+
+.logo{
+  width: 57px;
+}
+
+
